resources/css/atstovavimas.css
@import "@fortawesome/fontawesome-free/css/solid";

body {
    background-color: rgb(250, 249, 249) !important;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
}

/* Fonts for paragraphs and headings */

p,
ol>li,
ul>li {
    font-family: 'Rubik', sans-serif;
    line-height: 1.7;
    font-size: 1.2em
}

img {
    margin-top: 1em;
    margin-bottom: 1em;
}

h1,
h2,
h3:not(.popover-header),
h4,
h5 {
    margin-top: 1.8em !important;
    font-family: 'Nunito Sans', sans-serif;
    line-height: 1.7;
    font-weight: 600;
}

/* Offsets anchor of section */

section:before {
    content: '';
    display: block;
    position: relative;
    width: 0;
    height: 1em;
    margin-top: -1em;
    visibility: hidden;
}

h4 {
    margin-top: 1em !important;
    margin-bottom: 0.8em !important;
    border-left: 6px solid #bd2835;
    padding-left: 0.5em
}

p a,
li a {
    font-family: 'Rubik', sans-serif;
    line-height: 1.7;
}

/* h4:hover a {
    transition: 1s;
} */

/* If target to _blank, add icon. */

a[target='_blank']::after {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    content: "\f360";
    padding-right: 6px;
    padding-left: 4px;
    text-decoration: none;
    display: inline-block;
    font-style: normal;
    font-variant: normal;
}

/* Link color to VU SA red */

a:not(.nav-link):not(.dropdown-item) {
    color: #bd2835 !important
}

a.nav-link,
a.dropdown-item {
    color: rgba(0, 0, 0, 0.9) !important
}

a:hover {
    color: #9b202b !important
}

nav a {
    font-size: 0.8em;
}

/* nav a.dropdown-item {
    font-size: 0.7em;
} */

.accordion-button:not(.collapsed) {
    color: #ffffff !important;
    background-color: #bd2835 !important;
}

.accordion-button:focus {
    box-shadow: 0 0 0 0.25rem #bd283544 !important;
}

.accordion-button {
    border-radius: 0.5rem !important
}


/* Config only on web*/

@media (min-width: 1400px) {
    main.page-content {
        width: calc(100% - 20rem);
        margin-left: 18rem;
    }

    /* Navigation config */

    div.vertical-nav {
        min-width: 17rem;
        /* width: 17rem; */
        height: 100vh;
        position: fixed;
        top: 0;
        left: 0;
        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
        align-items: normal;
        justify-content: start;

    }
}

@media (max-width: 1399px) {
    footer {
        display: none;
    }
}

@media (min-width: 1200px) {
    h1 {
        font-size: 3rem !important
    }

    h2 {
        font-size: 2.4rem !important
    }

    h3:not(.popover-header) {
        font-size: 1.8rem !important
    }

    h4 {
        font-size: 1.4rem !important;
    }
}

svg {
    margin-bottom: 50px
}

svg:hover>g {
    opacity: 0.3;
    transition: 0.2s
}

svg:hover>g:hover {
    opacity: 1.0;
    transition: 0.1s
}

.img-fluid {
    max-width: 700px !important
}

